--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
 <body>
     <header>
-        <div class="bud col-sm-m-2">
             <div class="card bg-dark text-white">
-                <img src="img/header.jpg" class="card-img head-img" alt="bg-img">
+                <img src="img/header.jpg" class="head-img " alt="bg-img">
                 <div class="card-img-overlay">
                     <h5 class="card-title ">
                         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -56,82 +55,36 @@
                               </div>
                             </div>
                           </nav>
-                        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-
-
-                            <a class=" navbar-brand text-white titre" href="index.html">Cui'Zine</a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-
-                            </button>
-                            <div class="collapse navbar-collapse ">
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    <li class="nav-item ">
-                                        <a class="nav-link active text-white" aria-current="page" href="#">Acccueil</a>
-                                    </li>
-                                    <li class="nav-item" id="navbarSupportedContent">
-                                        <a class="nav-link text-white" href="#">Blog</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link text-white" href="#" tabindex="-1"
-                                            aria-disabled="true">Contact</a>
-                                    </li>
-                                    <li class="nav-item dropdow">
-                                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown"
-                                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                            Equipe
-                                        </a>
-
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li>
-                                                <hr class="dropdown-divider">
-                                            </li>
-
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                        </ul>
-                            </div>
-
-
-
-
-
-                        </nav> -->
+                          
                         <hr>
                     </h5>
-
-
                     <div class="container">
                         <div class="row justify-content-center ">
 
-                            <img src="img/logo_square_white.png " class="img col-3" alt="logo_square_white">
+                            <img src="img/logo_square_white.png " class="img col-3 fourchette" alt="logo_square_white">
                         </div>
-                        <div class="row align-items-end justify-content-center my-3 text-center">
-
+                        <div class="text-center">
                             <div class="titre">
                                 <p class="card-text h3">Cui'Zine</p>
                                 <p class="card-text h4">Le Mag cuisine</p>
                             </div>
-                        </div>
-
+                        </div>                       
                     </div>
                 </div>
             </div>
     </header>
+    
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row justify-content-center titre">
             <p class="h3 m-4">Derniers articles</p>
         </div>
     </div>
 
 
-    <div class="container">
+    <div class="container-fluid">
 
-        <div class="row justify-content-center  ">
+        <div class="row justify-content-center ">
 
             <div class="card p-2 m-4" style="width: 25rem;">
                 <img src="img/articles/suzette/suzette-small.jpg" class="card-img-top" alt="...">
@@ -222,14 +175,6 @@
         </div>
 
     </footer>
-
-
-
-
-
-    </div>
-
-
     <!-- javascript -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
