--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="img/header.jpg" class="head-img " alt="bg-img">
                 <div class="card-img-overlay">
                     <h5 class="card-title ">
-                        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
                             <div class="container-fluid">
                               <a class="navbar-brand text-white titre" href="#">Cui'Zine</a>
                               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -121,7 +121,7 @@
 
         </div>
         <div class="row justify-content-center"></div>
-        <a class=" text-dark m-2" href="#"> &lt;&lt; Voir les articles précédents </a>
+        <a class=" text-dark m-2" href="#"> <p class="h4"></p>&lt;&lt; Voir les articles précédents</p> </a>
 
     </div>
 
